--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,3 @@
-homework2-201420971/backend/node_modules/
-homework2-201420971/frontend/node_modules/
+*/node_modules/
+*/node_modules/
 homework2-201420971/.idea/
