--- a/chatting/chatting_ex1/package.json
+++ b/chatting/chatting_ex1/package.json
@@ -5,7 +5,7 @@
   "dependencies": {
     "react": "^16.8.1",
     "react-dom": "^16.8.1",
-    "react-scripts-cssmodules": "^1.1.50"
+    "react-scripts": "2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
