버튼 선택히 태그 변경으로 스타일 변경하는법 적용 ObservableCollection으로 리스트에 값들 추가

--- a/c#/finder/Finder/Finder.csproj
+++ b/c#/finder/Finder/Finder.csproj
@@ -63,6 +63,7 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="Models\CharacterInfo.cs" />
     <Compile Include="Models\MainModel.cs" />
     <Compile Include="Models\RecruitCondition.cs" />
     <Compile Include="ViewModels\Command\DelegateCommand.cs" />
